--- a/myenv/pyvenv.cfg
+++ b/myenv/pyvenv.cfg
@@ -1,5 +1,5 @@
 home = C:\Users\kerly\AppData\Local\Programs\Python\Python312
 include-system-site-packages = false
-version = 3.12.0
-executable = C:\Users\kerly\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\kerly\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\kerly\Python_files\malinois\myenv
+version = 3.12.3
+executable = C:\Users\kerly\Python_files\malinois\myenv\Scripts\python.exe
+command = C:\Users\kerly\Python_files\malinois\myenv\Scripts\python.exe -m venv C:\Users\kerly\Python_files\malinois\myenv
